<resources>
    <string name="app_name">Mis Recetas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_borrar">Borrar</string>
    <string name="action_anadir_subs">Anadir Substitutivos</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_ingredientes_list">IngredientesList</string>
    <string name="title_activity_recetas">Recetas</string>
    <string name="title_activity_receta_deatails">RecetaDeatails</string>
    <string name="title_activity_ingredientes">Ingredientes</string>
    <string name="dialog_add_ok">Aceptar</string>
    <string name="dialog_add_cancel">Cancelar</string>
    <string name="dialog_add_name_ingre">Nombre Ingrediente</string>
    <string name="dialog_add_titulo">Añade un ingrediente</string>
    <string name="dialog_empty_text">No ha introducido ningún nombre</string>
    <string name="dialog_exist_text">Este ingrediente ya existe</string>
    <string name="dialog_add_text">Ingrediente guardado</string>
    <string name="addReceta_name">Nombre receta</string>
    <string name="addReceta_Desc">Descripción Receta</string>
    <string name="title_activity_add_ingredientes_receta">Ingredientes Receta</string>
    <string name="add_Ingredientes_Intent">INTENTiNGREDIENTES</string>
    <string name="add_Ingredientes_Subs_Intent">INTENT_INGREDIENTES_SUBS</string>
    <string name="add_Ingredientes_delete_title">Quiere borrar el ingrediente?</string>
    <string name="add_Substitutivos_delete_title">Quiere borrar el Substituto de la lista?</string>
    <string name="add_Ingredientes_delete_borrar">Borrar</string>
    <string name="title_activity_add_subs">Ingredientes Substitutivos</string>
    <string name="title_activity_add_receta">Añadir Receta</string>
    <string name="add_Receta_add">Guardar Receta</string>
    <string name="add_Receta_Ingredientes">Ingredientes</string>
    <string name="intent_Receta">RECETA</string>
    <string name="dialog_Receta_Edit_Name_Title">Editar Nombre</string>
    <string name="dialog_Receta_Edit_Descripcion_Title">Editar Descripción</string>
    <string name="dialog_Receta_Edit_Descripcion_check">Quiere modificar la descripción?</string>
    <string name="dialog_Receta_Edit_Name_check">Quiere modificar el nombre?</string>
    <string name="dialog_Receta_Edit_Photo_check">Quiere modificar la imagen?</string>
    <string name="dialog_Receta_Edit_Ingredientes_check">Quiere modificar los ingredientes?</string>
    <string name="dialog_Receta_Substitutivos_title">Lista de substitutivos</string>
    <string name="button_add_lista_ingredientes">Guardar</string>
    <string name="addimagecontent">Imagen</string>
    <string name="title_activity_add_receta_new">addRecetaNew</string>
    <string name="buttonAboutText">Sobre Nosotros</string>
    <string name="title_activity_about_us">Sobre Nosotros</string>
    <string name="receta_detalles_empty_desc">Sin descripcción</string>
    <string name="title_activity_recetasContainer">Receta</string>

</resources>
