<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/addRecetaPhoto"
                    android:layout_weight="1"
                    android:contentDescription="@string/addimagecontent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:id="@+id/addReceta_Name"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:hint="@string/addReceta_name"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <EditText
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:minLines="6"
                    android:gravity="top|left"
                    android:maxLines="20"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scrollbars="vertical"
                    android:id="@+id/addReceta_Desc"
                    android:layout_weight="0.15"
                    android:textSize="15dp"
                    android:hint="@string/addReceta_Desc"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/addReceta_checkedButton"
                        android:layout_weight="1"
                        android:background="@drawable/checkedonly" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/addReceta_cancelButton"
                        android:layout_weight="1"
                        android:background="@drawable/canceltynired" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/add_Receta_Ingredientes"
                    android:background="@drawable/button"
                    style="@style/button_text"
                    android:id="@+id/addReceta_ButtonIng" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/add_Receta_add"
                    android:background="@drawable/button"
                    style="@style/button_text"
                    android:id="@+id/addReceta_ButtonAdd" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>