<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.alexandreortigosa.appfi.recetas.addReceta1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

<LinearLayout
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.17">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addRecetaPhoto"
                android:layout_weight="1"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.22">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/addReceta_Name"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:hint="@string/addReceta_name"/>
            </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.17">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <EditText
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="6"
                android:gravity="top|left"
                android:maxLines="20"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scrollbars="vertical"
                android:id="@+id/addReceta_Desc"
                android:layout_weight="0.15"
                android:textSize="15dp"
                android:hint="@string/addReceta_Desc"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.85">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/addReceta_checkedButton"
                    android:layout_weight="1"
                    android:background="@drawable/checkedonly" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/addReceta_cancelButton"
                    android:layout_weight="1"
                    android:background="@drawable/canceltynired" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.22">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_Receta_Ingredientes"
                android:background="@drawable/button"
                style="@style/button_text"
                android:id="@+id/addReceta_ButtonIng" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.22">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_Receta_add"
                android:background="@drawable/button"
                style="@style/button_text"
                android:id="@+id/addReceta_ButtonAdd" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>